syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message CanChange {
  int32 UserID = 1;
  string NickName = 2;
  string City = 3;
  string Sexual = 4;
  int32 Height = 5;
  int32 Weight = 6;
  repeated string Speaklanguage = 7;
  string Education = 8;
  string Job = 9;
  int32 AnnualSalary = 10;
  string Sociability = 11;
  string hobbyType = 12;
  int32 Experience = 13;
  string AccompanyType = 14;
  string Religious = 15;
  string Introduce = 16;
  google.protobuf.Timestamp InfoChangedAt = 17;
}
